<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Nayi Soch,Sahi Disha</string>
    <!--<string name="title_activity_main2">Aacharya Vimalsagarsooriji</string>-->
    <string name="title_activity_main2">Nayi Soch Sahi Disha</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="edit" tools:ignore="UnusedResources">Edit</string>
    <string name="trash" tools:ignore="UnusedResources">Delete</string>
    <string name="progressmsg">Please wait…</string>
    <string name="internet">Internet Not Connected.</string>

    <!--Navigation Item-->
    <string name="user">User</string>
    <string name="users">User Detail</string>
    <string name="home">Home</string>
    <string name="information">Information</string>
    <string name="adminlist">Sub Admin List</string>
    <string name="event">Event</string>
    <string name="audio">Audio</string>
    <string name="video">Video</string>
    <string name="thought">Thoughts</string>
    <string name="gallaery">Gallery</string>
    <string name="question">Q &amp; A</string>
    <string name="competition">Competition</string>
    <string name="Opinionpoll">Opinion Poll</string>
    <string name="jainism">Jainism</string>
    <string name="bypeople">By People</string>
    <string name="setting">Setting</string>

    <!-- Strings related to login -->

    <!--Information-->
    <string name="infotitle">Please enter title.</string>
    <string name="infodes">Please enter description.</string>
    <string name="infoaddress">Please enter location.</string>
    <string name="selectdate">Please select date.</string>
    <string name="selecttime">Please select time.</string>
    <string name="eventdate" tools:ignore="UnusedResources">Please enter date.</string>
    <string name="addaudio">Please enter audio name.</string>
    <string name="addaudiophoto">Please upload image.</string>
    <string name="uploadcategoryimage">Please upload image.</string>
    <string name="uploadcategoryimagegal">Please upload image.</string>
    <string name="uploadaudio">Please upload audio.</string>
    <string name="addaudiocategory">Please enter audio category.</string>
    <string name="addvideocategory">Please upload video category image.</string>
    <string name="videoenter">Please enter video name.</string>
    <string name="videoimage">Please upload image.</string>
    <string name="videocatimage">Please upload image.</string>
    <string name="thoughttitle">Please enter thought title.</string>
    <string name="thoughtdes">Please enter thought description.</string>
    <string name="questionreply">Please enter reply question.</string>
    <string name="competitioncategory" tools:keep="@string/competitioncategory">Please enter competition category.</string>
    <string name="opinionpollquestion">Please enter opinion question.</string>
    <string name="questionerror">Please enter question.</string>
    <string name="sendnotification">Send Notification</string>


    <!--Gallery-->
    <string name="album_view">Select photo album</string>
    <string name="image_view">Tap to select images</string>

    <string name="add">ADD</string>
    <string name="selected">selected</string>
    <string name="limit_exceeded" tools:ignore="PluralsCandidate">Can select a maximum of %d images</string>

    <string name="error_null_cursor">Oops, something went wrong!</string>

    <!--Request Permission-->
    <string name="permission_info">App requires permission to Storage to view images.</string>
    <string name="permission_force">App requires permission to Storage to view images. Tap Settings and go to Permissions to grant permission.</string>
    <string name="permission_ok">OK</string>
    <string name="permission_settings">Settings</string>
    <string name="permission_package">package</string>
    <string name="slide_image">Sliding Image</string>
    <string name="comment_detail">Comment Detail</string>
    <string name="splash_content">Vichar Kranti</string>
    <string name="vichar_kranti">View Vichar Kranti</string>
    <string name="add_vichar_kranti">Add Vichar Kranti</string>
    <string name="add_admin">Add Admin</string>
    <string name="enter_name">Please enter name.</string>
    <string name="enter_email">Please enter email.</string>
    <string name="valid_email">Please enter valid email address.</string>
    <string name="enter_mobile">Please enter mobile mo.</string>
    <string name="ten_digit">Please enter 10 digit.</string>
    <string name="enter_username">Please enter username.</string>
    <string name="enter_password">Please enter password.</string>
    <string name="confirm_password">Please enter confirm password.</string>
    <string name="password_not_same">Confirm password not same.</string>

    <string name="reopen">Something want to wrong please try again.</string>

    <string name="label_sample">sample</string>
    <string name="label_aspect_ratio">Aspect ratio</string>
    <string name="label_dynamic">Dynamic</string>
    <string name="label_image_source">Image source</string>
    <string name="label_square">Square</string>
    <string name="label_max_cropped_image_size">Max cropped image size</string>
    <string name="label_compression_settings">Compression settings</string>
    <string name="label_ui">UI</string>
    <string name="label_width">Width</string>
    <string name="label_height">Height</string>
    <string name="label_resize_image_to_max_size">Resize image to max size</string>
    <string name="label_hide_bottom_ui_controls">Hide bottom UI controls</string>
    <string name="label_freestyle_crop">Freestyle crop</string>
    <string name="label_select_picture">Select Picture</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_ok">OK</string>

    <string name="notification_image_saved">Image saved</string>
    <string name="notification_image_saved_click_to_preview">Image saved. Click to preview.</string>

    <string name="menu_download">Download</string>

    <string name="button_pick_amp_crop"><![CDATA[Pick & Crop]]></string>
    <string name="button_crop_random_image">Crop random image</string>

    <string name="description_cropped_image">Cropped image</string>

    <string name="format_crop_result_d_d">Crop Result (%1$dx%2$d)</string>
    <string name="format_quality_d">Quality: %d</string>
    <string name="format_d_d_px">%1$dx%2$d px</string>
    <string name="format_max_cropped_image_size">Max cropped image size cannot be less then %d</string>

    <string name="permission_title_rationale">Permission needed</string>
    <string name="permission_read_storage_rationale">Storage read permission is needed to pick files.</string>
    <string name="permission_write_storage_rationale">Storage write permission is needed to save the image.</string>

    <string name="toast_cannot_retrieve_selected_image">Cannot retrieve selected image</string>
    <string name="toast_cannot_retrieve_cropped_image">Cannot retrieve cropped image</string>
    <string name="toast_unexpected_error">Unexpected error</string>

    <string name="file_provider_authorities">com.yalantis.ucrop.provider</string>
    <string name="channel_name">ucrop_chanel</string>
    <string name="channel_description">ucrop result image</string>
    <string name="title_activity_botton">BottonActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="notification_alert">Alert</string>
    <string name="bottom_user">User</string>

</resources>
